--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
       <id>sonatype</id>
       <url>https://oss.sonatype.org/content/groups/public/</url>
     </repository>
+    <repository>
+      <id>viaversion-repo</id>
+      <url>https://repo.viaversion.com</url>
+    </repository>
   </repositories>
 
   <dependencies>
@@ -75,6 +79,12 @@
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
       <version>5.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.viaversion</groupId>
+      <artifactId>viaversion-api</artifactId>
+      <version>LATEST</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
